# sc2d

./: README.md  build.bat  config.bat  run.bat
demo/: main.c  polygon.c  polygon.h
src/: collib2d.c  collib2d.h  demo.c  main.c  polygon.c  polygon.h  sc2d.h
src/demo/: CMakeLists.txt  sc2d_demo.c
